# BanglaVoiceType

./: .gitignore  CMakeLists.txt  README.md  build.bat  convert_icon.py
docs/: ARCHITECTURE.md  IMPLEMENTATION.md
resources/: app.manifest  app.rc  resource.h
src/: app.cpp  app.h  config.cpp  config.h  indicator.cpp  indicator.h  main.cpp  paster.cpp  paster.h  recorder.cpp  recorder.h  transcriber.cpp  transcriber.h  ui.cpp  ui.h  updater.cpp  updater.h  wav_utils.h
